@@ -138,7 +138,8 @@ CODING STYLE
 Before submitting a patch for inclusion, please run the modified
 source code files through astyle with the following options
 
-    $ astyle --style=linux --indent=spaces=4 -y -S
+    $ astyle --style=linux --indent=spaces=4 -S --max-code-length=80 \
+             --break-after-logical --indent-namespaces
 
 More information about astyle can be found here:
 
